updated index.html and added css sheet

--- a/index.html
+++ b/index.html
@@ -1,13 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Rep. Mark Green Info</title>
     
-</body>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+  </head>
+  <body>
+    <!--Component to contain all various sections of information concerning congressman-->
+    <article class="congressperson">
+      <!--Section to contain name,image, district info, and political affiliation-->
+      <section class="congressperson__info">
+        <header>
+          <div class="congressperson__info__name">
+            <h1>Rep. Mark Green</h1>
+            <h4>Republican</h4>
+          </div>
+        </header>
+        <div class="congressperson__info__picture">
+          <img
+            src="https://www.govtrack.us/static/legislator-photos/412819-200px.jpeg"
+            alt="picture of 7th District of Tennessee Congressman Mark Green"
+          />
+        </div>
+
+        <div class="congressperson__info__district">
+          <h4>Representative for Tennessee's 7th District</h4>
+          <div class="congressperson__info__district__map">
+            <iframe
+              width="425"
+              height="300"
+              frameborder="0"
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+              src="https://www.govtrack.us/congress/members/embed/mapframe?state=tn&district=7&bounds=-89.424,37.225,-86.375,34.42"
+            ></iframe>
+          </div>
+          <div>
+            <p>
+              The 7th Congressional District of Tennessee is a congressional
+              district located in parts of Middle and West Tennessee. It has
+              been represented by Republican Mark E. Green since January 2019.
+            </p>
+            <p>
+              The district is located in both West and Middle Tennessee. It
+              stretches as far north as the Kentucky border, as far south as
+              Mississippi/Alabama border, as far east as Franklin, and as far
+              west as Bolivar. It is currently composed of the following
+              counties: Chester, Decatur, Giles, Hardeman, Hardin, Henderson,
+              Hickman, Houston, Humphreys, Lawrence, Lewis, McNairy, Montgomery,
+              Perry, Stewart, Wayne, and Williamson. It also includes
+              significant portions of Benton and Maury.
+            </p>
+            <p>
+              More information on the 7th Congressional district can be found
+              <a
+                href="https://en.wikipedia.org/wiki/Tennessee%27s_7th_congressional_district"
+                >here</a
+              >
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="congressperson__committees">
+        <h4>Committees and Subcomittees</h4>
+        <a href="https://www.govtrack.us/congress/committees/HSHM"
+          >House Committee on Homeland Security</a
+        >
+        <p>
+          Member, Subcommittee on
+          <a href="https://www.govtrack.us/congress/committees/HSHM/05"
+            >Intelligence and Counterterrorism</a
+          >
+        </p>
+        <p>
+          Member, Subcommittee on
+          <a href="https://www.govtrack.us/congress/committees/HSHM/07"
+            >Transportation and Maritime Security</a
+          >
+        </p>
+        <a href="https://www.govtrack.us/congress/committees/HSGO"
+          >House Committee on Oversight and Reform</a
+        >
+        <p>
+          Member, Subcommittee on
+          <a href="https://www.govtrack.us/congress/committees/HSGO/06"
+            >National Security</a
+          >
+        </p>
+      </section>
+      <section class="congressperson__bills">
+        <h4>Bills Sponsered by the Congressman</h4>
+        <ul>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr4720"
+              >H.R. 4720: To amend title 10, United States Code, to establish
+              the Assistant Secretary of Defense for Space, and for other
+              purposes.
+            </a>
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hres536"
+              >H.Res. 536: Strongly condemning the violent actions of Antifa and
+              recognizing that it engages in domestic terrorism.</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr3717"
+              >H.R. 3717: Dollars for the Wall Act</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr3532"
+              >H.R. 3532: China Technology Transfer Control Act of 2019</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hjres68"
+              >H.J.Res. 68: Proposing a balanced budget amendment to the
+              Constitution of the United States.</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr2990"
+              >H.R. 2990: Rural Health Care Access Act of 2019</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr2715"
+              >H.R. 2715: Medicaid Improvement and State Flexibility Act of
+              2019</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr2716"
+              >H.R. 2716: Protecting Gold Star Children Act of 2019</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr2589"
+              >H.R. 2589: Unifying DHS Intelligence Enterprise Act</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hres304"
+              >H.Res. 304: Raising a question of the privileges of the House.</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr2047"
+              >H.R. 2047: Allied Burden Sharing Report Act of 2019</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hjres52"
+              >H.J.Res. 52: Proposing an amendment to the Constitution of the
+              United States to require that the Supreme Court of the United
+              States be composed of nine justices.</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr1810"
+              >H.R. 1810: Kids to College Act</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr1563"
+              >H.R. 1563: Chester County Reversionary Interest Release Act</a
+            >
+          </li>
+          <li>
+            <a href="https://www.govtrack.us/congress/bills/116/hr847"
+              >H.R. 847: Protecting Gold Star Spouses Act of 2019</a
+            >
+          </li>
+        </ul>
+      </section>
+
+      <footer></footer>
+    </article>
+  </body>
 </html>
